# inferrous

./: .gitignore  Cargo.toml  rustfmt.toml
.github/workflows/: ci.yml  security.yml
src/: config.rs  cpu.rs  lib.rs  main.rs  tokenizer.rs
src/tensor_core/: mod.rs  ops.rs
src/tokenizer/: bpe.rs  builder.rs  config.rs  mod.rs  production.rs  traits.rs  types.rs
